crates/overdrive-core/tests/compile_fail/reconcile_cannot_take_libsql_handle.stderr
error[E0053]: method `reconcile` has an incompatible type for trait
  --> tests/compile_fail/reconcile_cannot_take_libsql_handle.rs:40:14
   |
40 |         _db: &LibsqlHandle,
   |              ^^^^^^^^^^^^^ expected `TickContext`, found `LibsqlHandle`
   |
   = note: expected signature `fn(&BadReconciler, &(), &(), &(), &TickContext) -> (Vec<Action>, ())`
              found signature `fn(&BadReconciler, &(), &(), &(), &LibsqlHandle) -> (Vec<Action>, ())`
help: change the parameter type to match the trait
   |
40 -         _db: &LibsqlHandle,
40 +         _db: &TickContext,
   |
